--- a/frontend/send-sol/package.json
+++ b/frontend/send-sol/package.json
@@ -29,6 +29,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
